[tool.poetry]
name = "ai_fin_latest"
version = "0.1.0"
description = "AI-Fin-Latest using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.8"}

[tool.poetry.scripts]
ai_fin_latest = "ai_fin_latest.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"